examples/should_pass/borrow-send.anvil

chan reg_itfc = {
    right req : (logic@#2)
}

proc reggg(e : right reg_itfc) =
    loop {
        let a = recv e::req in
        a =>
        dprint "Received %d" (a);
        cycle 1
    }

proc top (e : left reg_itfc) =
    reg r : logic
    loop {
        set r := 1'b0 =>
        send e::req (!r) =>
        cycle 1 =>
        set r := 1'b1
    }

