examples/should_fail/tight-send-assign.anvil
chan ch = {
    left req : (logic@req)
}

proc top(e : right ch) =
    reg r : logic
    loop {
        set r := 1'b1 =>
        send e.req (*r)
    }
